tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/static_field_not_found.bal
import ballerina/jballerina.java;

public function interopWithFieldSetError() {
    isEmpty(true);
}

function isEmpty(boolean arg) = @java:FieldSet {
    name:"isEmpty",
    'class:"org/ballerinalang/nativeimpl/jvm/tests/JavaFieldAccessMutate"
} external;
